--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,33 @@
 <html>
 <h1><center>Listing articles</center></h1>
  <center>
-<table><center>
+  <form action="/search">
+    Search <input type="text" name="titlename" placeholder="Enter the Title">
+    <input type="submit" value="Go">
+  </form>
+  <br>
+<table cellpadding="10" border="2">
   <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th>Author</th>
-    <th></th>
+    <th><strong>Title</strong></th>
+    <th><strong>Text</strong></th>
+    <th><strong>Author</strong></th>
+    
   </tr>
- 
   <% @articles.each do |article| %>
     <tr>
-      <td><%= article.title %></td>
+      <td><%= article.title %></td> 
       <td><%= article.text %></td>
       <td><%= article.author %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td><%= link_to 'Destroy', article_path(article),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
-  </center>
-</table>
- <%= link_to 'Create New Article', new_article_path(@article) %>
+  
+</table><br>
+ <h4><%= link_to 'Create New Article', new_article_path(@article) %></h4>
+
  </center>
 </html>
