--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,14 @@
 <html>
+<style type="text/css">
+	body
+	{background-image: url("file:/home/manohar/Downloads/books3.jpeg");}
+</style>
+<body>
 <center>
-<h1>Hello Manohar</h1>
+<h1>Hello Manohar,</h1><br>
+<h2>Welcome to your first App</h2>
 
-<%= link_to 'My Blog', controller: 'articles' %>
+<h2><%= link_to 'My Blog', controller: 'articles' %></h2>
 </center>
+</body>
 </html>
