--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
 <html>
 <style type="text/css">
 	body
-	{background-image: url("file:/home/manohar/Downloads/books3.jpeg");}
+	{background-image: url("https://wallpaperaccess.com/full/170249.jpg");}
 </style>
 <body>
 <center>
-<h1>Hello Manohar,</h1><br>
-<h2>Welcome to your first App</h2>
+<h1><font size="20px">Hello Manohar,</font></h1><br>
+<h2><font size="20px">Welcome to your first App</font></h2>
 
 <h2><%= link_to 'My Blog', controller: 'articles' %></h2>
 </center>
