--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,25 @@
 <html>
-<h1><center>Listing articles</center></h1>
+<style type="text/css">
+  body
+  {background-image: url("https://images.all-free-download.com/images/graphicthumb/47_hd_picture_of_the_japanese_style_color_background_170001.jpg");
+  }
+  table
+   { font-size: 24px; }
+</style>
+<body>
+<h1><center><font size="20">Listing articles</font></center></h1>
  <center>
   <form action="/search">
-    Search <input type="text" name="titlename" placeholder="Enter the Title">
-    <input type="submit" value="Go">
+    <font size="5">Search <input type="text" name="titlename" placeholder="Enter the Title">
+    <input type="submit" value="Go"></font>
   </form>
   <br>
-<table cellpadding="10" border="2">
+<table cellpadding="15" border="5" font-size="20">
   <tr>
     <th><strong>Title</strong></th>
     <th><strong>Text</strong></th>
     <th><strong>Author</strong></th>
+    <th><strong>Total Chars in Text</strong></th>
     
   </tr>
   <% @articles.each do |article| %>
@@ -18,6 +27,7 @@
       <td><%= article.title %></td> 
       <td><%= article.text %></td>
       <td><%= article.author %></td>
+      <td><%= article.text_chars_count %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Destroy', article_path(article),
@@ -27,7 +37,8 @@
   <% end %>
   
 </table><br>
- <h4><%= link_to 'Create New Article', new_article_path(@article) %></h4>
+ <h2><%= link_to 'Create New Article', new_article_path(@article) %></h2>
 
  </center>
+</body>
 </html>
