--- a/app/views/articles/search.html.erb
+++ b/app/views/articles/search.html.erb
@@ -1,8 +1,16 @@
-<center>
-	<h1>Search results</h1>
-	<table border="2" cellpadding="10">
+<style type="text/css">
+  body
+  {background-image: url("https://images.all-free-download.com/images/graphicthumb/47_hd_picture_of_the_japanese_style_color_background_170001.jpg");
+  }
+  table
+   { font-size: 24px; }
+</style>
+<body>
+  <center>
+	<h1><font size="20">Search results</font></h1>
+	<table border="5" cellpadding="15" font-size="20">
 		<tr>
-			<td><strong>Title</td>
+			<td><strong>Title</strong></td>
 			<td><strong>Text</strong></td>
 			<td><strong>Author</strong></td>
 		</tr>
@@ -13,13 +21,13 @@
       <td><%= article.author %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Destroy', article_path(article),
+      <td><%= link_to 'Delete', article_path(article),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
       </tr>
       <% end %>
   </table>
   <br>
-  <%= link_to 'Back',articles_path %>
-  
+  <h2><%= link_to 'Back',articles_path %></h2>
+  </body>
 </center>
