--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,9 @@
 <html>
 <style type="text/css">
   body
-  {background-image: url("https://images.all-free-download.com/images/graphicthumb/47_hd_picture_of_the_japanese_style_color_background_170001.jpg");
+  {background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-repeat: no-repeat;
+  background-size: cover;
   }
   table
    { font-size: 24px; }
@@ -20,11 +22,6 @@
   <td><%= @article.text %></td>
 </tr>
 
- 
-<tr>
-  <td><strong>Author:</strong></td>
-  <td><%= @article.author %></td>
-</tr>
 
 </table>
 <br>
