--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,12 @@
 <html>
 <style type="text/css">
 	body
-	{background-image: url("https://wallpaperaccess.com/full/170249.jpg");}
+  {background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
 </style>
+<body>
 <body>
 <center>
 <h1><font size="20px">Hello Manohar,</font></h1><br>
