--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,10 @@
 <html>
 <style type="text/css">
   body
-  {background-image: url("https://images.all-free-download.com/images/graphicthumb/47_hd_picture_of_the_japanese_style_color_background_170001.jpg");
+  {
+   background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-repeat: no-repeat;
+  background-size: cover;
   }
   table
    { font-size: 24px; }
@@ -18,7 +21,6 @@
   <tr>
     <th><strong>Title</strong></th>
     <th><strong>Text</strong></th>
-    <th><strong>Author</strong></th>
     <th><strong>Total Chars in Text</strong></th>
     
   </tr>
@@ -26,7 +28,6 @@
     <tr>
       <td><%= article.title %></td> 
       <td><%= article.text %></td>
-      <td><%= article.author %></td>
       <td><%= article.text_chars_count %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
