--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,8 @@
 <style type="text/css">
   body
-  {background-image: url("https://images.all-free-download.com/images/graphicthumb/47_hd_picture_of_the_japanese_style_color_background_170001.jpg");
+  {background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-repeat: no-repeat;
+  background-size: cover;
   }
 </style>
 <body>
@@ -35,12 +37,6 @@
     <%= form.label :text %><br>
     <%= form.text_area :text, :size => "30x10" %>
     </font></center>
-  </p>
-
-  <p><center><font size="6">
-    <%= form.label :author %><br>
-    <%= form.text_area :author,:size => "30x2"  %>
-   </font> </center>
   </p>
 
   <p><center><font size="10">
