--- a/app/views/articles/search.html.erb
+++ b/app/views/articles/search.html.erb
@@ -1,6 +1,8 @@
 <style type="text/css">
   body
-  {background-image: url("https://images.all-free-download.com/images/graphicthumb/47_hd_picture_of_the_japanese_style_color_background_170001.jpg");
+  {background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-repeat: no-repeat;
+  background-size: cover;
   }
   table
    { font-size: 24px; }
@@ -12,13 +14,11 @@
 		<tr>
 			<td><strong>Title</strong></td>
 			<td><strong>Text</strong></td>
-			<td><strong>Author</strong></td>
 		</tr>
 <% @articles.each do |article| %>
     <tr>
       <td><%= article.title %></td> 
       <td><%= article.text %></td>
-      <td><%= article.author %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Delete', article_path(article),
