Association added and working fine on console

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -44,5 +44,5 @@
    </font> </center>
   </p>
 
-  <h2><center><%= link_to 'Back', articles_path %></center></h2></body>
+  <h2><center><%= link_to 'Back', author_articles_path %></center></h2></body>
 <% end %>
