--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
 <h1><font size="20px">Hello Manohar,</font></h1><br>
 <h2><font size="20px">Welcome to your first App</font></h2>
 
-<h2><%= link_to 'My Blog', controller: 'articles' %></h2>
+<h2><%= link_to 'My Blog', controller: 'authors' %></h2>
 </center>
 </body>
 </html>
