--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
 <body>
 <h1><center><font size="20">Listing articles</font></center></h1>
  <center>
-  <form action="/search">
+  <form action="/search2">
     <font size="5">Search <input type="text" name="titlename" placeholder="Enter the Title">
     <input type="submit" value="Go"></font>
   </form>
@@ -29,7 +29,9 @@
       <td><%= article.title %></td> 
       <td><%= article.text %></td>
       <td><%= article.text_chars_count %></td>
-       <td><%= link_to 'Delete', author_articles_path(article),
+      <td><%= link_to 'Show', author_article_path(article.author,article) %></td>
+      <td><%= link_to 'Edit', edit_author_article_path(article.author,article) %></td>
+       <td><%= link_to 'Delete', author_article_path(article.author,article),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
     </tr>
