--- a/app/views/articles/search2.html.erb
+++ b/app/views/articles/search2.html.erb
@@ -19,15 +19,14 @@
     <tr>
       <td><%= article.title %></td> 
       <td><%= article.text %></td>
-      <td><%= link_to 'Show', author_article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_author_article_path(article) %></td>
-      <td><%= link_to 'Delete', author_article_path(article),
+      <td><%= link_to 'Show', author_article_path(article.author,article) %></td>
+      <td><%= link_to 'Edit', edit_author_article_path(article.author,article) %></td>
+       <td><%= link_to 'Delete', author_articles_path(article.author,article),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
       </tr>
       <% end %>
   </table>
   <br>
-  <h2><%= link_to 'Back',author_articles_path %></h2>
-  </body>
+  <h2><center><%= link_to 'Back', author_articles_path(@articles) %></center></h2></body>
 </center>
