--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -12,7 +12,7 @@
 <body>
 <h1><center><font size="20">Listing Authors</font></center></h1>
  <center>
-  <form action="/search">
+  <form action="/search1">
     <font size="5">Search <input type="text" name="authorname" placeholder="Enter the AuthorName">
     <input type="submit" value="Go"></font>
   </form>
