--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -29,13 +29,13 @@
 
   <p><center><font size="6">
     <%= form.label :title %><br>
-    <%= form.text_area :title,:size => "30x2" %>
+    <%= form.text_field :title %>
     </font></center>
   </p>
  
   <p><center><font size="6">
     <%= form.label :text %><br>
-    <%= form.text_area :text, :size => "30x10" %>
+    <%= form.text_area :text %>
     </font></center>
   </p>
 
@@ -44,7 +44,7 @@
   </font></center>
 </p>
 
-  <p><center><font size="10">
+  <p><center><font>
     <%= form.submit :style => 'padding-top: 14px'%>
    </font> </center>
   </p>
