--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -6,7 +6,7 @@
   }
 </style>
 <body>
-  <center><h1><font size="20">New Author</font></h1></center>
+  <center><font size="20">New Author</font></center>
 <%= form_with(model: @author, local: true) do |form| %>
 
 <% if @author.errors.any? %>
@@ -27,17 +27,17 @@
     </div>
   <% end %>
 
-  <p><center><font size="6">
+  <p><center><font>
     <%= form.label :author_name %><br>
-    <%= form.text_area :author_name,:size => "30x2" %>
+    <%= form.text_area :author_name %>
     </font></center>
   </p>
  
 
-  <p><center><font size="10">
+  <p><center><font>
     <%= form.submit :style => 'padding-top: 14px'%>
    </font> </center>
   </p>
 
-  <h2><center><%= link_to 'Back', authors_path %></center></h2></body>
+  <center><%= link_to 'Back', authors_path %></center></body>
 <% end %>
