--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -6,7 +6,7 @@
   }
 </style>
 <body>
-  <center><h1><font size="20">New Author</font></h1></center>
+  <center><h1><font size="20">New Author</font></h1></center><br>
 <%= form_with scope: :author,url: authors_path, local: true do |form| %>
 
 <% if @author.errors.any? %>
@@ -27,14 +27,14 @@
     </div>
   <% end %>
 
-  <p><center><font size="6">
+  <p><center><font size="5">
     <%= form.label :author_name %><br>
     <%= form.text_area :author_name,:size => "30x2" %>
     </font></center>
   </p>
  
 
-  <p><center><font size="10">
+  <p><center><font>
     <%= form.submit :style => 'padding-top: 14px'%>
    </font> </center>
   </p>
