--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -28,13 +28,14 @@
   <% end %>
 
   <p><center><font size="5">
+    
     <%= form.label :author_name %><br>
-    <%= form.text_area :author_name,:size => "30x2" %>
+    <%= form.text_field :author_name,:size => "30x2" %>
     </font></center>
   </p>
  
 
-  <p><center><font>
+  <p><center><font size="5">
     <%= form.submit :style => 'padding-top: 14px'%>
    </font> </center>
   </p>
