added a sidebar and blogs options

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,14 +1,9 @@
 <style type="text/css">
-  body
-  {background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
+  
 </style>
 <body>
   <center><h1><font size="20">New Article</font></h1></center>
-
-<%= form_with(model: @article,url: author_articles_path, local: true) do |f| %>
+<%= form_with(model: @article,url: author_articles_path, local: true) do |form| %>
 
 <% if @article.errors.any? %>
     <div id="error_explanation">
@@ -29,28 +24,29 @@
   <% end %>
 
   <p><center><font size="6">
-    <%= f.label :title %><br>
-    <%= f.text_area :title,:size => "30x2" %>
+    <%= form.label :title %><br>
+    <%= form.text_field :title %>
     </font></center>
   </p>
  
   <p><center><font size="6">
-    <%= f.label :text %><br>
-    <%= f.text_area :text, :size => "30x10" %>
-    </font></center>
-  </p>
-<%= form_with(model: @article.author, local: true) do |form| %>
-   <p><center><font size="6">
-    <%= form.label :author_name %><br>
-    <%= form.text_area :author_name, :size => "30x10" %>
+    <%= form.label :text %><br>
+    <%= form.text_area :text %>
     </font></center>
   </p>
 
-  <p><center><font size="10">
+  <p><center><font size="6">
+    <%= form.collection_select :aut_name, Author.all, :author_name, :author_name %>
+  </font></center>
+</p>
+
+  <p><center><font>
     <%= form.submit :style => 'padding-top: 14px'%>
    </font> </center>
   </p>
 
   <h2><center><%= link_to 'Back', author_articles_path %></center></h2></body>
 <% end %>
-<% end %>
+
+  
+
