--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,30 +1,19 @@
 <html>
 <style type="text/css">
-  body
-  {
-   background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
+
   table
    { font-size: 24px; }
 </style>
 <body>
 <h1><center><font size="20">Listing Authors</font></center></h1>
  <center>
-<% if author_signed_in? %>
-<h2><%= link_to current_author.email, edit_author_registration_path %></h2>
-<h2><%= link_to 'Logout', destroy_author_session_path, method: :delete %></h2>
-<% else %>
-  <h2 ><%= link_to 'Sign Up', new_author_registration_path %></h2>
- <h2 ><%= link_to 'Login', new_author_session_path %></h2>
-<% end %>
+
   <form action="/search1">
     <font size="5">Search <input type="text" name="authorname" placeholder="Enter the AuthorName">
     <input type="submit" value="Go"></font>
   </form>
   <br>
-<table cellpadding="15" border="5" font-size="20">
+<table cellpadding="10" border="2">
   <tr>
     <th><strong>Author</strong></th>
     
@@ -43,6 +32,9 @@
 </table><br>
 <h2><%= link_to 'Create New Author', new_author_path() %></h2>
  <h2><%= link_to 'Go to Articles Table', author_articles_path(@authors) %></h2>
+ <% current_author.articles.each do |a| %>
+ <%= a.title %>
+ <% end %>
 
  </center>
 </body>
