--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
 </style>
 <body>
 <center>
+  
 <h1>Sign up</h1><br>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -30,6 +31,14 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 <br>
+<%= form_with scope: :author, local: true do |form| %>
+<p><center><font size="5">
+    
+    <%= form.label :author_name %><br>
+    <%= form.text_field :author_name,:size => "30x2" %>
+    </font></center>
+  </p>
+  <% end %>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
