--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,7 +2,7 @@
   
 </style>
 <body>
-  <center><h1><font size="20">New Article</font></h1></center>
+  <center><h1><font size="15">New Article</font></h1></center><br>
 <%= form_for @article,url: author_articles_path, local: true do |form| %>
 
 <% if @article.errors.any? %>
@@ -23,29 +23,30 @@
     </div>
   <% end %>
 
-  <p><center><font size="6">
+  <p><center><font size="3">
     <%= form.label :title %><br>
-    <%= form.text_field :title %>
+    <%= form.text_field :title,:size => "30x2" %>
     </font></center>
   </p>
  
-  <p><center><font size="6">
+  <p><center><font size="3">
     <%= form.label :text %><br>
-    <%= form.text_area :text %>
+    <%= form.text_area :text,:size => "30x2" %>
     </font></center>
   </p>
 
-  <p><center><font size="6">
+  <p><center><font size="3">
+    <%= form.label :author_name %><br>
     <%= form.collection_select :aut_name, Author.all, :author_name, :author_name %>
   </font></center>
 </p>
-
+<br>
   <p><center><font>
-    <%= form.submit :style => 'padding-top: 14px'%>
+    <%= form.submit :style => 'padding-top: 10px'%>
    </font> </center>
   </p>
 
-  <h2><center><%= link_to 'Back', author_articles_path %></center></h2></body>
+  <h3><center><%= link_to 'Back', author_articles_path %></center></h3></body>
 <% end %>
 
   
