--- a/app/views/authors/showeach.html.erb
+++ b/app/views/authors/showeach.html.erb
@@ -1,8 +1,10 @@
 <html>
 <style type="text/css">
   
-  table
-   { font-size: 20px; }
+   table
+   { font-size: 20px;
+     }
+
 </style>
 <body>
 <center>
