--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,9 +1,5 @@
 <style type="text/css">
-  body
-  {background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
+  
 </style>
 <body>
 <center>
@@ -12,12 +8,12 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field"><font size="5">
+  <div class="field"><font size="3">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :size => "30x2"%>
   </div>
 <br>
-  <div class="actions">
+  <div class="actions"><font size="3">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
