--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,16 @@
 <style type="text/css">
-  body
-  {background-image: url("https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
-  background-repeat: no-repeat;
-  background-size: cover;
-  }
+  
 </style>
 <body>
 <center>
   
 <h1>Sign up</h1><br>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field"><font size="5">
+  <div class="field"><font size="3">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :size => "30x2" %>
   </div>
 <br>
   <div class="field">
@@ -23,23 +18,24 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", :size => "30x2" %>
   </div>
 <br>
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", :size => "30x2" %>
   </div>
 <br>
-<%= form_with scope: :author, local: true do |form| %>
-<p><center><font size="5">
+
+<p><center>
     
-    <%= form.label :author_name %><br>
-    <%= form.text_field :author_name,:size => "30x2" %>
+    <%= f.label :author_name %><br>
+    <%= f.text_field :author_name,:size => "30x2" %>
     </font></center>
   </p>
-  <% end %>
-  <div class="actions">
+  <br>
+ 
+  <div class="actions"><font size="3">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
