--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -68,13 +68,12 @@ font-family: 'Oswald', sans-serif;
 }
 
 .sidebar {
-  height: 100%;
-  width: 160px;
+  height: 88.5%;
+  width: 250px;
   position: fixed;
   z-index: 1;
   top: 48px;
   left: 0;
-  bottom: 96px;
   background-color: darkgreen;
   overflow-x: hidden;
   padding-top: 16px;
@@ -117,8 +116,7 @@ font-family: 'Oswald', sans-serif;
   <nav class="navbar navbar-default" role="navigation" aria-expanded="false">
   <div class="nav">
     <ul class="nav nav-pills">
-        <li role="presentation"><a href="http://localhost:3000">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+        
         <li role="presentation"><a href="http://localhost:3000/authors/sign_up">Sign Up</a></li>
         <li role ="presentation"><a href="http://localhost:3000/authors/sign_in">Login</a></li>
       </ul>
@@ -130,9 +128,9 @@ font-family: 'Oswald', sans-serif;
 
 <!-- The sidebar -->
 <div class="sidebar">
-  <a href="#home"><i class="fa fa-fw fa-home"></i> Home</a>
-  <a href="#services"><i class="fa fa-fw fa-book"></i> My Blog</a>
-  <a href="#clients"><i class="fa fa-fw fa-book"></i> All Blogs</a>
+  <a href="http://localhost:3000"><i class="fa fa-fw fa-home"></i> Home</a>
+  <a href="#services"><i class="fa fa-fw fa-user"></i> About</a>
+  
 </div>
 <div class="footer">
   
