--- a/app/views/shared/_navbar2.html.erb
+++ b/app/views/shared/_navbar2.html.erb
@@ -105,10 +105,65 @@ font-family: 'Oswald', sans-serif;
   .sidebar a {font-size: 18px;}
 }
 
+/* Style the sidenav links and the dropdown button */
+.dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
+  width:100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+
+/* On mouse-over */
+.dropdown-btn:hover {
+  color: #f1f1f1;
+}
+
+
+/* Add an active class to the active dropdown button */
+.active {
+  background-color: green;
+  color: white;
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+  background-color: #262626;
+  padding-left: 8px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
     </style>
     <!-- Latest compiled and minified CSS -->
     <!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="sign up form css.css">-->
+    <script type="text/javascript">
+      var dropdown = document.getElementsByClassName("dropdown-btn");
+var i;
+
+for (i = 0; i < dropdown.length; i++) {
+  dropdown[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var dropdownContent = this.nextElementSibling;
+    if (dropdownContent.style.display === "block") {
+      dropdownContent.style.display = "none";
+    } else {
+      dropdownContent.style.display = "block";
+    }
+  });
+}
+    </script>
 </head>
 <body>
 
@@ -116,8 +171,7 @@ font-family: 'Oswald', sans-serif;
   <nav class="navbar navbar-default" role="navigation" aria-expanded="false">
   <div class="nav">
     <ul class="nav nav-pills">
-        <li role="presentation"><a href="http://localhost:3000">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+        
         <li role="presentation"><%= link_to 'Logout', destroy_author_session_path, method: :delete %></li>
         <li role ="presentation"><a href="http://localhost:3000/authors/edit"><%= current_author.email %></a></li>
       </ul>
@@ -129,11 +183,21 @@ font-family: 'Oswald', sans-serif;
 
 <!-- The sidebar -->
 <div class="sidebar">
+  <a href="http://localhost:3000"><i class="fa fa-fw fa-home"></i> Home</a>
+  <a href="#services"><i class="fa fa-fw fa-user"></i> About</a>
+  <button class="dropdown-btn">My Articles
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-container">
+    <%= link_to 'Show', author_path(current_author) %>
+    <%= link_to 'Edit Author', edit_author_path(current_author) %>
+    <%= link_to 'Delete Author', author_path(current_author),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
+  </div>
   
-  <%= link_to 'My Blog', author_path(current_author) %>
-  <%= link_to 'All Blog', authors_path %>
-
-</div>
+  <%= link_to 'All Articles', author_articles_path(current_author) %>
+</div>  
 
 <div class="footer">
   
